# Explainable-AI-assisted-Misinformation-Advisory-System

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/: app.py  config.py
backend/src/database/: db.py  repository.py
backend/src/routes/: history.py  predict.py
backend/src/schemas/: request.py  response.py
backend/src/services/: bert_service.py  lr_service.py  model_loader.py  prompt_model.py
backend/src/utils/: cleaner.py  get_my_time.py  verify.py
frontend/: .dockerignore  Dockerfile  app.py  config.js  index.html  pyproject.toml  script.js
frontend/src/: app.py
frontend/src/static/css/: style.css
frontend/src/static/js/: config.js  script.js
frontend/src/templates/: index.html
