[project]
name = "ml-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "google-genai>=2.10.0",
    "joblib>=1.5.3",
    "lime>=0.2.0.1",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "scikit-learn==1.6.1",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "uvicorn>=0.49.0",
]
